# maynard

./: .gitignore  Makefile.am  README.md  configure.ac  maynard.in
data/: org.raspberrypi.maynard.gschema.xml.in.in
keynes/: Background.cc  Background.h  Config.h  Makefile.am  MaynardCurtain.cc  MaynardCurtain.h  MaynardFavorites.cc  MaynardFavorites.h  MaynardLauncher.cc  MaynardLauncher.h  MaynardPanel.cc  MaynardPanel.h  MaynardVerticalClock.cc  MaynardVerticalClock.h  Panel.cc  Panel.h  Wayland.cc  Wayland.h  WlWindow.cc  WlWindow.h  aclock.cc  aclock.h  acpustatus.cc  acpustatus.h  applet.cc  applet.h  aworkspaces.cc  aworkspaces.h  config.h  globit.c  keynes  keynes.cc  keynes.h  keynes.nim  mycpu.c  mycpu.h  objbar.cc  objbutton.h  panel-wayland.h  style.css  (+44 more)
keynes/backup/: Makefile.am
shell/: Makefile.am  clock.c  favorites.c  launcher.c  maynard.c  panel.c  shell-app-system.c  shell-helper.c
